--- a/resources/assets/styles/modules/_mainSlider.scss
+++ b/resources/assets/styles/modules/_mainSlider.scss
@@ -1,5 +1,5 @@
 .main-slider {
-  .swiper-container {
+  .swiper-container-main {
     width: 100%;
 
     .swiper-slide {
@@ -56,6 +56,15 @@
             z-index: -1;
           }
         }
+      }
+
+      .opacity-gradient {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0), rgb(0, 0, 0.4));
       }
     }
 
