--- a/resources/assets/styles/modules/_mainVideos.scss
+++ b/resources/assets/styles/modules/_mainVideos.scss
@@ -1,22 +1,55 @@
 .main-videos {
-  display: flex;
-
   .videobox {
     display: flex;
     flex-flow: column;
+    width: auto;
 
     .imagecontainer {
       width: 400px;
       height: 225px;
+      margin-bottom: 20px;
 
       img {
         width: 100%;
         height: 100%;
         object-fit: cover;
       }
+    }
 
-      .tagcontainer {
+    .tagcontainer {
+      display: flex;
+      margin-bottom: 20px;
+
+      .locked {
+        background-color: theme-color("red-1");
+        width: 45px;
+        height: 30px;
+        padding-top: 5px;
+        padding-bottom: 10px;
         display: flex;
+
+        img {
+          width: 100%;
+          object-fit: contain;
+        }
+      }
+
+      .date {
+        padding: 10px;
+        background-color: theme-color("grey-1");
+
+        p {
+          margin: 0;
+        }
+      }
+
+      .tag {
+        padding: 10px;
+        background-color: theme-color("grey-2");
+
+        p {
+          margin: 0;
+        }
       }
     }
   }
