adds basic font sizes// fine styles heroSlider

--- a/resources/assets/styles/common/_variables.scss
+++ b/resources/assets/styles/common/_variables.scss
@@ -8,6 +8,15 @@ $theme-colors: (
   grey-2: #1a1a1a,
 );
 
+$font-size-h1: 68px;
+$font-size-h2: 68px;
+$font-size-h3: 32px;
+$font-size-h4: 22px;
+
+$font-size-p0: 14px;
+$font-size-p: 12px;
+$font-size-p1: 10px;
+
 /** Bootstrap navbar fix (https://git.io/fADqW) */
 $navbar-dark-toggler-icon-bg: none;
 $navbar-light-toggler-icon-bg: none;
