--- a/resources/assets/styles/common/_global.scss
+++ b/resources/assets/styles/common/_global.scss
@@ -3,5 +3,33 @@ html body {
 
   p {
     color: white;
+    font-size: $font-size-p;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4 {
+    color: white;
+  }
+
+  h1 {
+    font-size: $font-size-h1;
+  }
+
+  h2 {
+    font-size: $font-size-h2;
+  }
+
+  h3 {
+    font-size: $font-size-h3;
+  }
+
+  h4 {
+    font-size: $font-size-h4;
+  }
+
+  .container {
+    max-width: 1520px;
   }
 }
