--- a/resources/assets/styles/modules/_mainSlider.scss
+++ b/resources/assets/styles/modules/_mainSlider.scss
@@ -14,7 +14,7 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
-        z-index: -1;
+        z-index: -2;
       }
 
       .inner-content {
@@ -56,10 +56,23 @@
             z-index: -1;
           }
         }
+
+        .text-content {
+          max-width: 800px;
+
+          p {
+            font-size: 18px;
+          }
+
+          h2 {
+            margin-bottom: 25px;
+          }
+        }
       }
 
       .opacity-gradient {
         position: absolute;
+        z-index: -1;
         top: 0;
         left: 0;
         width: 100%;
