--- a/resources/assets/styles/modules/_mainSlider.scss
+++ b/resources/assets/styles/modules/_mainSlider.scss
@@ -81,55 +81,12 @@
       }
     }
 
-    .swiper-button-next {
+    .main-slider-button-next {
       right: 0;
     }
 
-    .swiper-button-prev {
+    .main-slider-button-prev {
       left: 0;
-    }
-
-    .swiper-button-prev,
-    .swiper-button-next {
-      display: flex;
-      width: 46px;
-      height: 93px;
-      box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.25);
-      transition: box-shadow 0.3s cubic-bezier(0.33, 1, 0.68, 1);
-      outline: none;
-
-      &:hover {
-        box-shadow: 3px 3px 5px 0 rgba(0, 0, 0, 0.45);
-        transition: box-shadow 0.3s cubic-bezier(0.33, 1, 0.68, 1);
-      }
-
-      .inner-content {
-        position: relative;
-        display: flex;
-        flex-flow: column;
-        justify-content: center;
-        height: 100%;
-        width: 100%;
-
-        img {
-          position: absolute;
-          display: flex;
-          width: 100%;
-        }
-
-        .white-background {
-          position: absolute;
-          height: 100%;
-          width: 100%;
-          background-color: white;
-          opacity: 0.6;
-          z-index: -1;
-        }
-      }
-
-      &::after {
-        display: none;
-      }
     }
   }
 }
