--- a/resources/assets/styles/common/_global.scss
+++ b/resources/assets/styles/common/_global.scss
@@ -117,6 +117,7 @@ html body {
         flex-flow: column;
         justify-content: center;
         padding: 0 15px;
+        transition: background-color 0.3s cubic-bezier(0.33, 1, 0.68, 1);
 
         &.locked {
           background-color: theme-color("red-1");
