--- a/resources/assets/styles/modules/_mainSlider.scss
+++ b/resources/assets/styles/modules/_mainSlider.scss
@@ -3,11 +3,10 @@
     width: 100%;
 
     .swiper-slide {
-      display: flex;
-      flex-flow: column;
-      justify-content: flex-end;
       height: 100vh;
       max-height: 1140px;
+      display: flex;
+      flex-flow: column;
 
       img {
         position: absolute;
@@ -19,19 +18,29 @@
 
       .inner-content {
         display: flex;
-        height: 100%;
         flex-flow: column;
-        justify-content: space-between;
-        margin-top: 70px;
-        margin-bottom: 150px;
+        height: 100%;
+        margin-top: 43px;
+        margin-bottom: 177px;
 
         .tag-box {
           display: flex;
 
+          span {
+            color: white;
+          }
+
           .date,
           .tag {
-            padding: 10px 17px;
+            padding: 13px 15px;
             position: relative;
+
+            p {
+              margin-bottom: 0;
+              letter-spacing: 0.3px;
+              font-size: 14px;
+              font-weight: bold;
+            }
           }
 
           .white-opacity-1 {
@@ -59,6 +68,7 @@
 
         .text-content {
           max-width: 800px;
+          margin-top: auto;
 
           p {
             font-size: 18px;
@@ -83,10 +93,12 @@
 
     .main-slider-button-next {
       right: 0;
+      top: 350px;
     }
 
     .main-slider-button-prev {
       left: 0;
+      top: 350px;
     }
   }
 }
