--- a/resources/assets/styles/common/_variables.scss
+++ b/resources/assets/styles/common/_variables.scss
@@ -17,9 +17,16 @@ $font-size-h2: 68px;
 $font-size-h3: 38px;
 $font-size-h4: 17px;
 
+$font-size-h1-mobile: 32px;
+$font-size-h2-mobile: 28px;
+$font-size-h3-mobile: 22px;
+$font-size-h4-mobile: 15px;
+
 $font-size-p0: 14px;
 $font-size-p: 12px;
 $font-size-p1: 10px;
+
+$font-size-p-mobile: 10px;
 
 /** Bootstrap navbar fix (https://git.io/fADqW) */
 $navbar-dark-toggler-icon-bg: none;
