adds mobile finestyling

--- a/resources/assets/styles/modules/_mainVideos.scss
+++ b/resources/assets/styles/modules/_mainVideos.scss
@@ -4,4 +4,17 @@
   .videobox-slide {
     margin-right: 40px;
   }
+
+  @include media-breakpoint-down(md) {
+    margin-top: -140px;
+
+    .swiper-wrapper {
+      display: flex;
+      flex-flow: column;
+
+      .videobox-slide {
+        margin-right: 0;
+      }
+    }
+  }
 }
