--- a/resources/assets/styles/common/_global.scss
+++ b/resources/assets/styles/common/_global.scss
@@ -2,6 +2,10 @@ html body {
   background: black;
   overflow-x: hidden;
 
+  .main {
+    overflow-x: unset;
+  }
+
   p {
     color: white;
     font-size: $font-size-p;
@@ -106,10 +110,20 @@ html body {
     flex-flow: column;
     width: auto;
 
+    @include media-breakpoint-down(md) {
+      width: 100%;
+    }
+
     .videobox-slide__image-container {
       width: 400px;
       height: 225px;
       margin-bottom: 20px;
+
+      @include media-breakpoint-down(md) {
+        width: 100%;
+        margin-bottom: 10px;
+        order: 1;
+      }
 
       img {
         width: 100%;
@@ -120,12 +134,21 @@ html body {
 
     .textcontainer {
       max-width: 350px;
+
+      @include media-breakpoint-down(md) {
+        margin-bottom: 5px;
+      }
     }
 
     .videobox-slide__tag-container {
       display: flex;
       height: 33px;
       margin-bottom: 20px;
+
+      @include media-breakpoint-down(md) {
+        order: 2;
+        margin-bottom: 40px;
+      }
 
       p {
         margin: 0;
