--- a/resources/assets/styles/modules/_mainSlider.scss
+++ b/resources/assets/styles/modules/_mainSlider.scss
@@ -23,6 +23,11 @@
         margin-top: 43px;
         margin-bottom: 177px;
 
+        @include media-breakpoint-down(md) {
+          margin-top: 30px;
+          margin-bottom: 120px;
+        }
+
         .tag-box {
           display: flex;
 
@@ -70,12 +75,21 @@
           max-width: 800px;
           margin-top: auto;
 
+          @include media-breakpoint-down(md) {
+            margin-bottom: auto;
+            margin-top: 50px;
+          }
+
           p {
             font-size: 18px;
           }
 
           h2 {
             margin-bottom: 25px;
+
+            @include media-breakpoint-down(md) {
+              margin-bottom: 10px;
+            }
           }
         }
       }
