--- a/resources/assets/styles/layouts/_header.scss
+++ b/resources/assets/styles/layouts/_header.scss
@@ -1,7 +1,33 @@
-.banner .nav li {
-  @extend .nav-item;
-}
+header {
+  @include media-breakpoint-down(sm) {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 2;
+  }
 
-.banner .nav a {
-  @extend .nav-link;
+  .navbar {
+    .navbar-brand {
+      padding: unset;
+      max-width: 70px;
+
+      img {
+        width: 100%;
+      }
+    }
+
+    .navbar-toggler {
+      outline: none;
+      border: none;
+    }
+
+    li a {
+      color: black;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
 }
